tests/parsing/dimacs/tokens/int.expected
File "tests/parsing/dimacs/tokens/int.cnf", line 1, character 2-3:
1 | p 1
      ^
Error while parsing a p-cnf header, read the integer '1',
      but expected the keyword "cnf".
